--- a/index.html
+++ b/index.html
@@ -1,35 +1,52 @@
-<html>
+<!DOCTYPE HTML>
 <head>
-<title>Taco Bell End Card</title>
+    <html lang="en">
+    <meta charset="utf-8">
+    <meta content=
+    "width=device-width, height=device-height, initial-scale=1"
+          name="viewport">
+
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="https://kit.fontawesome.com/b8bc3ec333.js" crossorigin="anonymous"></script>
+    <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet'>
+
+<title>Taco Bell End Card</title>
 </head>
 <body>
 
     <div class="card"> 
 
     <div class="logo">
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQB_LV4NZabjk6jf3i33C2Qs5G_RywYRzlEG-UhryD6kKTpzjvY_JfxWNuyWBBpwSp0xPg&usqp=CAU" alt="taco" height="75%" width="50%">
+    <a href="https://www.tacobell.com">
+     <img class="img-logo" src="https://breamikel.github.io/taco-bell-end-card/live-mas-tacobell-logo.png" alt="taco bell logo" height="100px" width="200px">
+    </a>
     </div>
 
     <div class="card-main">
-        <h1 class="card-title">20 ITEMS. $1 EACH.</h1>
-        <h2 class="card-maintext">EXPLORE THE POWER OF THE DOLLAR</h2>
-        <p class="card-hashtag">#BELLUMINATI </p>
+        <img class="card-image" src="https://breamikel.github.io/taco-bell-end-card/marketing-copy-tacobell.png" alt="taco bell advertisement">
     </div>
 
+    <div class="btn-group">
+
+     <a class="btn-link" href="https://www.tacobell.com"> LEARN MORE
+    </a>
+
+    <a class="btn-link" href="https://www.google.com/search?q=taco+bell+near+me"> GET DIRECTIONS
+    </a>
+
+    </div>
+
+    <div class="icons">
         <ul class="social-list">
-            <li class="social-item"><a class="social-link" href=""></a>1</li>
-            <li class="social-item"><a class="social-link" href=""></a>2</li>
-            <li class="social-item"><a class="social-link" href=""></a>3</li>
+            <li class="social-item"><a class="fab fa-twitter-square" href="https://twitter.com/tacobell?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"></a></li>
+    
+            <li class="social-item"><a class="fab fa-instagram-square" href="https://www.instagram.com/tacobell/"></a></li>
+            
+            <li class="social-item"><a class="fab fa-youtube-square" href="https://www.youtube.com/channel/UCGAWuGsaWysuMHbj0w2-Ffw"></a></li>
         </ul>
     </div>
-</div>
 
-<footer class="footer">
-    <button class="action-button">
-        Learn More
-    </button>
-</footer>
+</div>
 
 </body>
 </html>
